--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "angular-test-clone-news",
   "version": "1.0.0",
-  "homepage": "https://dmitiy.github.io/angular_test_news_clone",
+  "homepage": "https://dmitiy.github.io/angular-test-clone-news",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy"
+    "deploy": "ng deploy --base-href=/angular-test-clone-news/"
   },
   "private": true,
   "dependencies": {
