--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,17 @@
     "printWidth": 120,
     "singleQuote": true,
     "trailingComma": "all",
-    "semi": false
+    "semi": true,
+    "tabWidth": 4,
+    "overrides": [
+        {
+            "files": "*.json",
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ],
+    "arrowParens": "always",
+    "endOfLine": "lf",
+    "singleAttributePerLine": true
 }
