--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "ng test",
     "deploy": "ng deploy --base-href=/angular-test-clone-news/",
     "lint": "eslint --fix --ext .ts .",
-    "prettier-check": "npx prettier --check src/**/*.{ts}",
-    "prettier-write": "npx prettier --write src/**/*.{ts}"
+    "prettier-check": "npx prettier --check src/**/*.ts",
+    "prettier-write": "npx prettier --write src/**/*.ts"
   },
   "private": true,
   "dependencies": {
@@ -50,6 +50,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "^2.8.2",
     "prettier-eslint": "^15.0.1",
     "typescript": "~4.8.2"
   },
